--- a/package.json
+++ b/package.json
@@ -3,23 +3,26 @@
   "version": "0.0.0",
   "description": "",
   "main": "./src/app.js",
-  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/bin/www",
-    "dev": "nodemon ./src/bin/www/"
+    "dev": "nodemon ./src/bin/www"
   },
   "keywords": [],
   "author": "",
-  "license":"ISC",
+  "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "global": "^4.4.0",    
-    "method-override": "^3.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "global": "^4.4.0",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
