--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/bin/www",
-    "dev": "nodemon ./src/bin/www"
+    "dev": "nodemon ./src/bin/www",
+    "build": "node build.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://chalys.github.io/WorkZone/",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,6 +27,8 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "fs-extra": "^11.2.0",
+    "gh-pages": "^6.2.0",
     "nodemon": "^3.1.0"
   }
 }
